# colornote-exporter

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
examples/: 1773619940425-MANUAL.backup  1773619940425-MANUAL.json  1773619997356-MANUAL.backup  1773619997356-MANUAL.json  passwords
tests/: test_main.py
