[project]
name = "colornote-exporter"
version = "0.1.0"
description = "Decrypt and export ColorNote backup notes."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pycryptodome",
    "readme-md>=2018.11.23",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
